# SC01-Plus-speedometer

./: README.md
Speedometer source code platform IO/: platformio.ini
Speedometer source code platform IO/src/: CMakeLists.txt  filelist.txt  lv_conf.h  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
Speedometer source code platform IO/src/components/: ui_comp.c  ui_comp.h  ui_comp_button1.h  ui_comp_hook.c  ui_comp_hook.h
Speedometer source code platform IO/src/fonts/: ui_font_Display16.c
Speedometer source code platform IO/src/images/: ui_img_compass_png.c  ui_img_speedfg_png.c
Speedometer source code platform IO/src/screens/: ui_Screen1.c  ui_Screen2.c
source code zip/SQ-SC01-Plus-Speedo_ModuleMore/src/: main.cpp
source code zip/SQ-SC01-Plus-Speedo_ModuleMore/src/components/: ui_comp_button1.c
source code zip/SQ-SC01-Plus-Speedo_ModuleMore/src/fonts/: ui_font_Display24.c  ui_font_Display40.c  ui_font_Display90.c
source code zip/SQ-SC01-Plus-Speedo_ModuleMore/src/images/: ui_img_speedbg_png.c
